<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="compress">Compressing</string>
    <string name="retry">Retry</string>
    <string name="video_hint">The video is less than 2 seconds</string>
    <string name="frament_explore_banner">Daily Picks</string>
    <string name="frament_explore_liketitle">Guess what you like</string>
    <string name="frament_video_title">Video</string>
    <string name="frament_picture_title">Picture</string>
    <string name="version_hint">latest version</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="success">Success</string>
    <string name="collect_success">Collected successfully</string>
    <string name="fail">Failure</string>
    <string name="nodata">No data</string>
    <string name="not_empty">Can not be empty</string>
    <string name="check">Check the request interruption</string>
    <string name="upload_failed">upload failed</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="first_txt">The first one is not removable</string>
    <string name="vip_time">Permanent</string>
    <string name="vip_time1">Membership has expired</string>
    <string name="vip_time2">Expire date:</string>
    <string name="language_en">English</string>
    <string name="language_zh">简体中文</string>
    <string name="language_zhtw">繁體中文</string>
    <string name="language_es">Español</string>
    <string name="language_de">Deutsch</string>
    <string name="language_fr">Français</string>
    <string name="language_sv">Svenska</string>
    <string name="language_ar">العربية</string>
    <string name="language_ja">日本語</string>
    <string name="language_ko">한국어</string>
    <string name="language_tr">Türkçe</string>
    <string name="language_fa">فارسی</string>
    <string name="language_iw">עברית</string>
    <string name="language_ku">Kurdî</string>
    <string name="language_ptbr">Português (Brasil)</string>
    <string name="language_pt">Português (Portugal)</string>
    <string name="language_it" translatable="false">Italiano</string>
    <string name="vip_to">Subscribe to become the VIP</string>
    <string name="upgrade_to_pro">Become VIP</string>
    <string name="see_all">More</string>
    <string name="hot_txt">Hot</string>
    <string name="logon_agree1">I agree to %s\'s</string>
    <string name="logon_agree2">Privacy Policy</string>
    <string name="login_text_people">TRANSFORM FACES\nEFFORTLESSLY\nTHE LATEST IN AI\nTECHNOLOGY, EASILY ADD\nFUN EFFECTS TO YOUR\nPHOTOS AND VIDEOS</string>
    <string name="vip_buy_the_pro_version">Go Pro Privileges</string>
    <string name="vip_txta1">VIP members can download images without watermarks</string>
    <string name="vip_txt1">VIP members can download images or videos without watermarks</string>
    <string name="vip_txt2">VIP members can use all templates</string>
    <string name="vip_txt3">VIP members will be prioritized for high-quality servers to generate results</string>
    <string name="vip_txt4">You can customize the video face swap template</string>
    <string name="vip_txt5">Automatic renewal agreement</string>
    <string name="vip_txt_atuo">The accumulated \'AIPoints\' refer to the total compute points that VIP users need to claim in \'Me -> AIPoints\'.\nPayment will be charged to your Google Wallet upon confirmation of subscription.Your subscription automatically renews unless you cancel the subscription 24 hours before the end of the current period.Your account will be charged for renewal at the price listed within 24 hours prior to the end of the current period.You can view the status of subscription and cancel the subscription at any time in the google account settings,and the cancellation will be effective since next subscription period and no refund for the current billing cycle.</string>
    <string name="vip_txt_atuo1">The \“Cumulative AIPoints\” refer to the total number of AIPoints that VIP users need to claim in \"Me -> AIPoints\". After confirming the subscription, the payment will be deducted from your Google wallet. You can view the subscription status and cancel it at any time through your Google account. Cancellation will take effect from the next billing cycle, and no refund will be provided for the current billing cycle.</string>
    <string name="vip_terms">Subscription Terms:</string>
    <string name="vip_continue">Continue</string>
    <string name="vip_most_popular">Trial</string>
    <string name="vip_txt_hint">You are not yet a member</string>
    <string name="vip_txt_date">Expire date:</string>
    <string name="search_videos_or_pictures_a">Search pictures…</string>
    <string name="search_videos_or_pictures">Search videos or pictures…</string>
    <string name="search_history_search">Search History</string>
    <string name="search_popular_search">Popular Search</string>
    <string name="search_change">Change</string>
    <string name="mine_title">Mine</string>
    <string name="mine_vip_all_templates3">No watermark</string>
    <string name="mine_collect">Collect</string>
    <string name="mine_generation_history">Generation history</string>
    <string name="mine_generation_recrds">Generate records</string>
    <string name="mine_my_face">My face</string>
    <string name="mine_my_share">Share, Get VIP</string>
    <string name="mine_my_share2">Share</string>
    <string name="mine_settings">Settings</string>
    <string name="mine_feedback">Feedback</string>
    <string name="mine_pro_member">Pro member</string>
    <string name="history_txt">Historical data will only be saved for 7 days, please save or download in time</string>
    <string name="settings_topic_switching">Topic switching</string>
    <string name="settings_language">Language</string>
    <string name="setting_log_out">Log out</string>
    <string name="logout_txt">Do you want to log out of the current account?</string>
    <string name="myface_editor">Editor</string>
    <string name="myface_without_cover">Face without cover, no glasses, no hat, try to face</string>
    <string name="myface_click_add_face">Click Add Face</string>
    <string name="myface_drop_sort">Drag-and-drop sort after long press</string>
    <string name="myface_select_all">Select all</string>
    <string name="myface_delete">Delete</string>
    <string name="myface_remove_face">Remove face</string>
    <string name="myface_remove_task">Remove Task</string>
    <string name="myface_remove_txt">Are you sure you want to remove \nface</string>
    <string name="myface_remove_task_txt">Are you sure you want to remove \ntask</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_ter">Confirm Termination</string>
    <string name="cancel">Cancel</string>
    <string name="complete">Complete</string>
    <string name="network_txt">Network abnormality, please check the network and try again</string>
    <string name="feedback_email">Email</string>
    <string name="feedback_question">Please enter the question you want to feedback</string>
    <string name="feedback_upload_txt">Upload image or video (no larger than 10MB)</string>
    <string name="feedback_history">History</string>
    <string name="feedback_details">Details</string>
    <string name="feedback_finished">Finished</string>
    <string name="feedback_add_a_comment">Add a comment…</string>
    <string name="feedback_post">post</string>
    <string name="picture_face">Picture Face</string>
    <string name="swapface_title">Swap</string>
    <string name="swap_start_production">Start production</string>
    <string name="swap_disclaimer">Disclaimer</string>
    <string name="swap_choose_face">Select face</string>
    <string name="production_title">In production…</string>
    <string name="production_swapping_face">Swapping face…</string>
    <string name="production_the_production">The production process requires AI and automatic calculation, which takes time, please wait patiently</string>
    <string name="production_the_production2">Pro Generation will produce more realistic works based on the template you choose and the style of the template</string>
    <string name="production_expected_time">Expected time</string>
    <string name="production_msg">Enable notification rights, we will send you a message when the generation is complete</string>
    <string name="production_msg1">We will send you a message once the generation is complete.</string>
    <string name="production_wait">Already waiting</string>
    <string name="production_wait_while">Please wait while building…</string>
    <string name="completion_title">Result</string>
    <string name="completion_collect">Collect</string>
    <string name="completion_download">Download</string>
    <string name="completion_txt">You can view "Build history" in "My"."Generate History", will only keep photos/videos for the last 7 days, after which it will be cleared if you like to remember favorites</string>
    <string name="completion_four_txt">Click to see a larger image and download it</string>
    <string name="completion_four_template">Template</string>
    <string name="swap_add_face">Add face</string>
    <string name="production_turn_on">Turn on</string>
    <string name="dialog_openmsg_enable">Enable APP notification rights</string>
    <string name="dialog_openmsg_txt">After opening, we will notify you through the APP \nnotification</string>
    <string name="authorized">Authorized</string>
    <string name="status_title">Status</string>
    <string name="status_production_failure">Generation Failed</string>
    <string name="status_txt">Sorry, the generation failed. There is usually a small probability of such errors during the face-swapping process. You can click the \"Retry\" button to try again.</string>
    <string name="upload_title">Select Face</string>
    <string name="upload_photo_example">Photo example</string>
    <string name="upload_check_failure">Check failure !</string>
    <string name="upload_he_is">He/She is</string>
    <string name="mian_explore">Explore</string>
    <string name="mian_template">Templates</string>
    <string name="mian_video_face">Video</string>
    <string name="mian_picture_face">Picture</string>
    <string name="dialog_exit">Are you sure you want to exit APP?</string>
    <string name="frament_tool_title">AI Tools</string>
    <string name="dialog_tool_title">Custom picture change face</string>
    <string name="dialog_tool_next">No prompt next time</string>
    <string name="dialog_tool_step1">Step 1:</string>
    <string name="dialog_tool_step2">Step 2:</string>
    <string name="dialog_tool_step3">Step 3:</string>
    <string name="dialog_tool_txt1">The user selects or uploads the image template</string>
    <string name="dialog_tool_txt2">System analysis shows that the face can be replaced</string>
    <string name="dialog_tool_txt3">Select or upload the face you want to replace</string>
    <string name="dialog_tool_txt2_video">(Video requirements: within 30min, size within 1GB, need to have a face)</string>
    <string name="frament_me_title">Me</string>
    <string name="dialog_discard_title">discard photo</string>
    <string name="dialog_discard_context">The current changes will not be saved</string>
    <string name="dialog_discard">Discard</string>
    <string name="remove_record">Remove record</string>
    <string name="remove_record_content">Are you sure you want to delete this record?</string>
    <string name="dialog_frame_title">Select the character screenshot in the video you want to replace.</string>
    <string name="note">Note: </string>
    <string name="dialog_frame_con1">(1) You can select up to three images only.</string>
    <string name="dialog_frame_con2">(2) Make sure the image includes the target face to replace, preferably the front view.</string>
    <string name="fragment_tool_share">ShareZone</string>
</resources>