<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="handler"
            type="com.face.view.LogoutDialog" />

        <variable
            name="gvm"
            type="com.face.util.GVM" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_dialog_loginout"
        android:orientation="vertical">
        <View
            android:id="@+id/view"
            android:layout_width="32dp"
            android:layout_height="2.5dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_swap_rounded_corners2" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/setting_log_out"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:text="@string/logout_txt"
            android:textAppearance="@style/font_14"
            android:textColor="@color/colorWhite" />

        <TextView
            bindSingleClick="@{()->handler.onConfirmClick()}"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_btn1_rounded_corners100"
            android:gravity="center"
            android:text="@string/confirm"
            android:textColor="@color/colorWhite"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            bindSingleClick="@{()->handler.dismissAllowingStateLoss()}"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="24dp"
            android:layout_marginBottom="34dp"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/colorWhite"
            android:textSize="14sp" />
    </LinearLayout>
</layout>
