<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="handler"
            type="com.face.view.ExitDialog" />

        <variable
            name="gvm"
            type="com.face.util.GVM" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_dialog_loginout"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="34dp"
            android:gravity="center"
            android:text="@string/dialog_exit"
            android:textAppearance="@style/font_14"
            android:textColor="@color/colorB2" />

        <TextView
            bindSingleClick="@{()->handler.onConfirmClick()}"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/bg_btn1_rounded_corners100"
            android:gravity="center"
            android:text="@string/confirm"
            android:textColor="@color/colorWhite"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            bindSingleClick="@{()->handler.dismissAllowingStateLoss()}"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="24dp"
            android:layout_marginBottom="34dp"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/colorB2"
            android:textSize="14sp" />
    </LinearLayout>
</layout>
