<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="handler"
            type="com.face.view.DeteleTaskDialog" />

        <variable
            name="gvm"
            type="com.face.util.GVM" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_rounded_w_corners24"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/remove_record"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:text="@string/remove_record_content"
            android:textAppearance="@style/font_14"
            android:textColor="@color/colorWhite50" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="27dp"
            android:background= "@color/colorWhite20" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtCan"
                bindSingleClick="@{()->handler.onConfirmClick()}"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingHorizontal="16dp"
                android:text="@string/confirm"
                android:textColor="@color/colorFont6"
                android:textSize="16sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="20dp"
                android:background= "@color/colorWhite20" />

            <TextView
                android:id="@+id/txtCon"
                bindSingleClick="@{()->handler.dismissAllowingStateLoss()}"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="@color/colorFont6"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</layout>
